--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "@cdxoo/omit",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "my variant of omitting object properties",
-  "main": "src/index.js",
+  "main": "lib/index.js",
   "scripts": {
-    "test": "npx mocha src/*.spec.js"
+    "clean": "npx rimraf lib",
+    "test": "npx mocha src/*.spec.js",
+    "build": "npx babel src/index.js --out-dir lib",
+    "prepublish": "npm run clean && npm run build"
   },
   "repository": {
     "type": "git",
@@ -17,7 +20,12 @@
   },
   "homepage": "https://github.com/cdxOo/omit#readme",
   "devDependencies": {
+    "@babel/cli": "^7.10.5",
+    "@babel/core": "^7.10.5",
+    "@babel/preset-env": "^7.10.4",
     "chai": "^4.2.0",
-    "mocha": "^8.0.1"
+    "cross-env": "^7.0.2",
+    "mocha": "^8.0.1",
+    "rimraf": "^3.0.2"
   }
 }
